# botris-cpp-template

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  vcpkg.json
include/: botris.hpp
src/: main.cpp
